Created demo model with pages

--- a/ChangeTrackingDemo/appsettings.json
+++ b/ChangeTrackingDemo/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ChangeTrackingDemoContext": "Server=(localdb)\\mssqllocaldb;Database=ChangeTrackingDemoContext-4e328303-ac32-4b01-8a33-d5e8f202656e;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
